--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -228,17 +228,17 @@ services:
             - TUNNEL_SECRET=${PLEX_TUNNEL_SECRET}     
 
     rclone_move_media:
-        image: rclone/rclone:1.61.1
+        image: ghcr.io/jonohill/rclone-move:30
+        restart: always
         volumes:
             - /mnt/data/tmp/plex-media:/source
             - /mnt/data/rclone_move_media:/config
-            - /home/ubuntu/compose/config/rclone_move_media/entrypoint:/entrypoint
         environment:
-            - RCLONE_CONFIG_SEED=${RCLONE_MOVE_MEDIA_CONF}
             - SOURCE=/source
             - DEST=jotta:/plex-media
-        entrypoint: /entrypoint
-        restart: always
+            - PLEX_PREFIX=/data/plex-media
+            - PLEX_URL=http://plex:32400
+            - PLEX_TOKEN=${PLEX_TOKEN}
 
     filebot:
         image: jonoh/nas-filebot:v0.0.24
