--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -359,18 +359,18 @@ services:
     # Other
     # ~~~~~
 
-    # radio_db:
-    #     image: ghcr.io/jonohill/radio_db:141
-    #     container_name: radio_db
-    #     environment:
-    #         - RDB_DATABASE_CONNECTION_STRING=${RDB_CONNECTION_STRING}
-    #         - RDB_SPOTIFY_CLIENT_ID=${RDB_SPOTIFY_CLIENT_ID}
-    #         - RDB_SPOTIFY_CLIENT_SECRET=${RDB_SPOTIFY_CLIENT_SECRET}
-    #         - RDB_SPOTIFY_AUTH_SEED=${RDB_SPOTIFY_AUTH_SEED}
-    #     volumes:
-    #         - /mnt/data/radio_db/config.yml:/app/config.yml
-    #         - /mnt/data/radio_db/root.crt:/root/.postgresql/root.crt
-    #     restart: always
+    radio_db:
+        image: ghcr.io/jonohill/radio_db:141
+        container_name: radio_db
+        environment:
+            - RDB_DATABASE_CONNECTION_STRING=${RDB_CONNECTION_STRING}
+            - RDB_SPOTIFY_CLIENT_ID=${RDB_SPOTIFY_CLIENT_ID}
+            - RDB_SPOTIFY_CLIENT_SECRET=${RDB_SPOTIFY_CLIENT_SECRET}
+            - RDB_SPOTIFY_AUTH_SEED=${RDB_SPOTIFY_AUTH_SEED}
+        volumes:
+            - /mnt/data/radio_db/config.yml:/app/config.yml
+            - /etc/ssl/certs/ca-certificates.crt:/root/.postgresql/root.crt
+        restart: always
 
     twitterdedupe-redis:
         image: redis:6.2.6
