--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
 
     vector:
         image: timberio/vector:0.30.0-debian
+        container_name: vector
+        restart: always
         volumes:
             - ./config/vector/vector.toml:/etc/vector/vector.toml
             - /var/run/docker.sock:/var/run/docker.sock
@@ -37,6 +39,7 @@ services:
             - LOKI_ENDPOINT=${LOKI_ENDPOINT}
             - LOKI_USER=${LOKI_USER}
             - LOKI_PASSWORD=${LOKI_PASSWORD}
+            - AXIOM_TOKEN=${AXIOM_TOKEN}
 
     healthchecks:
         image: ghcr.io/jonohill/nas-healthchecks:12
