--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -229,7 +229,7 @@ services:
             - /mnt/data/plex:/config
             - /tmp/plex-transcode:/transcode
             - /tmp:/tmp
-            - /tmp/caches/plex:/caches/rclone_plex
+            - /tmp/caches/plex:/mnt/tmp/caches/rclone_plex
             - /mnt/data/downloads:/downloads
         cap_add:
             - SYS_ADMIN
