--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     # ~~~~~~~~~~~~ 
 
     vector:
-        image: timberio/vector:0.36.0-debian
+        image: timberio/vector:0.36.1-alpine
         container_name: vector
         restart: always
         volumes:
