--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
         container_name: vector
         restart: always
         volumes:
-            - ./config/vector/vector.toml:/etc/vector/vector.toml
+            - ./config/vector:/etc/vector
             - /var/run/docker.sock:/var/run/docker.sock
         environment:
             - LOKI_ENDPOINT=${LOKI_ENDPOINT}
