--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -202,7 +202,7 @@ services:
     # ~~~~~ 
 
     plex:
-        image: jonoh/nas-plex:v0.0.137
+        image: ghcr.io/hillnz/docker-nas-plex:218
         container_name: plex
         restart: always
         labels:
